--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,4 +1,3 @@
-<!-- <h3>{{getProject().getName()}}</h3> -->
 <div class="app-panel shadow">
     <form class="project-form">
 
@@ -25,14 +24,13 @@
             <mat-expansion-panel-header class="form-group-header">
                 Typ
             </mat-expansion-panel-header>
-            <!-- TODO: dorobić zapisywanie -->
             <select class="form-control" id="project-type" name="type"
-            [ngModel]='(getType())'
+            [ngModel]='model.getProject().getType()' (ngModelChange)="model.getProject().setType($event)"
             (change)="updateProject()">
-                <option value="default">Nieokreślony</option>
-                <option value="small">Mały</option>
-                <option value="medium">Średni</option>
-                <option value="big">Duży</option>
+                <option value="projectType.DEFAULT">Nieokreślony</option>
+                <option value="projectType.SMALL">Mały</option>
+                <option value="projectType.MEDIUM">Średni</option>
+                <option value="projectType.BIG">Duży</option>
             </select>
         </mat-expansion-panel>
     
@@ -40,14 +38,13 @@
             <mat-expansion-panel-header class="form-group-header">
                 Stan
             </mat-expansion-panel-header>
-            <!-- TODO: dorobić zapisywanie -->
             <select class="form-control" id="project-status" name="status"
-            [ngModel]='getStatus()'
+            [ngModel]='model.getProject().getStatus()' (ngModelChange)="model.getProject().setStatus($event)"
             (change)="updateProject()">
-                <option value="started">Aktywny</option>
-                <option value="ended">Zakończony</option>
-                <option value="canceled">Anulowany</option>
-                <option value="awaiting">Oczekujący</option>
+                <option value="status.STARTED">Aktywny</option>
+                <option value="status.ENDED">Zakończony</option>
+                <option value="status.CANCELED">Anulowany</option>
+                <option value="status.AWAITING">Oczekujący</option>
             </select>
         </mat-expansion-panel>
 
@@ -79,8 +76,8 @@
 
     </form>
     <div class="form-buttons-section">
-        <button class="button form-button" id="close-button" (click)='close()'>Zamknij</button>
-        <button class="button form-button" id="save-button" (click)='save()'
+        <button class="button form-button" id="close-button" (click)='closeView()'>Zamknij</button>
+        <button class="button form-button" id="save-button" (click)='saveProject()'
         *ngIf="!model.isUpdateMode()">Zapisz</button>
     </div>
 </div>
