--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,4 +1,8 @@
 <div class="app-panel shadow">
+    <div class="tool-panel">
+        <h3 class="panel-header">{{model.getProject().getName()}}</h3>
+        <button class="button border" (click)="closeView()">X</button>
+    </div>
     <form class="project-form">
 
         <mat-expansion-panel class="form-group" [expanded]='true'>
@@ -15,9 +19,9 @@
                 Opis
             </mat-expansion-panel-header>
             <textarea class="form-control" id="project-description" name="description" rows="4"
-            [ngModel]='model.getProject().getDescription()' (ngModelChange)="model.getProject().setDescription($event)"></textarea>
-            <!-- TODO: poprawić ten przycisk. Zrobić jakieś ukrywanie, jeżeli nie było żadnych zmian -->
-            <button class="button small-button border insert-button" (click)="updateProject()">Wstaw</button>
+            [ngModel]='model.getProject().getDescription()' (ngModelChange)="model.getProject().setDescription($event)"
+            (keyup.enter)="updateProject()" (focusout)="updateProject()"></textarea>
+            
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="true">
@@ -75,7 +79,4 @@
         </mat-expansion-panel>
 
     </form>
-    <div class="form-buttons-section">
-        <button class="button form-button" id="close-button" (click)='closeView()'>Zamknij</button>
-    </div>
 </div>
